--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@tailwindcss/vite": "^4.0.8",
+    "element-plus": "^2.9.5",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
