--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@tailwindcss/vite": "^4.0.8",
     "element-plus": "^2.9.5",
     "pinia": "^3.0.1",
-    "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -24,7 +23,10 @@
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
